--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@expo/metro-runtime": "~3.1.3",
     "@react-native-picker/picker": "^2.7.5",
+    "@react-navigation/drawer": "^6.6.15",
     "@react-navigation/stack": "^6.3.29",
     "expo": "~50.0.14",
     "expo-status-bar": "~1.11.1",
@@ -20,6 +21,7 @@
     "react-native-element-dropdown": "^2.10.4",
     "react-native-elements": "^3.4.3",
     "react-native-gesture-handler": "~2.14.0",
+    "react-native-reanimated": "~3.6.2",
     "react-native-vector-icons": "^10.0.3",
     "react-native-web": "~0.19.6"
   },
