--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "react-native-gesture-handler": "~2.14.0",
     "react-native-reanimated": "~3.6.2",
     "react-native-vector-icons": "^10.0.3",
-    "react-native-web": "~0.19.6"
+    "react-native-web": "~0.19.6",
+    "expo-sqlite": "~13.4.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
