--- a/package.json
+++ b/package.json
@@ -14,17 +14,18 @@
     "@react-navigation/drawer": "^6.6.15",
     "@react-navigation/stack": "^6.3.29",
     "expo": "~50.0.17",
+    "expo-sqlite": "~13.4.0",
     "expo-status-bar": "~1.11.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-native": "0.73.6",
     "react-native-element-dropdown": "^2.10.4",
     "react-native-elements": "^3.4.3",
+    "react-native-flash-message": "^0.4.2",
     "react-native-gesture-handler": "~2.14.0",
     "react-native-reanimated": "~3.6.2",
     "react-native-vector-icons": "^10.0.3",
-    "react-native-web": "~0.19.6",
-    "expo-sqlite": "~13.4.0"
+    "react-native-web": "~0.19.6"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
