--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@expo/metro-runtime": "~3.1.3",
+    "@react-native-community/datetimepicker": "7.7.0",
     "@react-native-picker/picker": "2.6.1",
     "@react-navigation/drawer": "^6.6.15",
     "@react-navigation/stack": "^6.3.29",
@@ -23,10 +24,10 @@
     "react-native-elements": "^3.4.3",
     "react-native-flash-message": "^0.4.2",
     "react-native-gesture-handler": "~2.14.0",
+    "react-native-paper": "^5.12.5",
     "react-native-reanimated": "~3.6.2",
-    "react-native-vector-icons": "^10.0.3",
-    "react-native-web": "~0.19.6",
-    "@react-native-community/datetimepicker": "7.7.0"
+    "react-native-vector-icons": "^10.2.0",
+    "react-native-web": "~0.19.6"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
