--- a/package.json
+++ b/package.json
@@ -12,7 +12,10 @@
     "@expo/metro-runtime": "~3.1.3",
     "@react-native-community/datetimepicker": "7.7.0",
     "@react-native-picker/picker": "2.6.1",
+    "@react-navigation/bottom-tabs": "^6.6.1",
     "@react-navigation/drawer": "^6.6.15",
+    "@react-navigation/material-bottom-tabs": "^6.2.29",
+    "@react-navigation/native": "^6.1.18",
     "@react-navigation/stack": "^6.3.29",
     "expo": "~50.0.17",
     "expo-sqlite": "~13.4.0",
