--- a/package.json
+++ b/package.json
@@ -23,12 +23,14 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-native": "0.73.6",
+    "react-native-chart-kit": "^6.12.0",
     "react-native-element-dropdown": "^2.10.4",
     "react-native-elements": "^3.4.3",
     "react-native-flash-message": "^0.4.2",
     "react-native-gesture-handler": "~2.14.0",
     "react-native-paper": "^5.12.5",
     "react-native-reanimated": "~3.6.2",
+    "react-native-svg": "14.1.0",
     "react-native-vector-icons": "^10.2.0",
     "react-native-web": "~0.19.6"
   },
