APK sendo instalado corretamente

--- a/app.json
+++ b/app.json
@@ -21,10 +21,26 @@
       "adaptiveIcon": {
         "foregroundImage": "./assets/adaptive-icon.png",
         "backgroundColor": "#ffffff"
-      }
+      },
+      "package": "com.erickmota.MyBuy",
+      "permissions": [
+        "INTERNET",
+        "ACCESS_FINE_LOCATION",
+        "READ_EXTERNAL_STORAGE",
+        "WRITE_EXTERNAL_STORAGE"
+      ],
+      "versionCode": 1
     },
     "web": {
       "favicon": "./assets/favicon.png"
-    }
+    },
+    "extra": {
+      "eas": {
+        "projectId": "3c2be47a-e524-47c5-903f-dd37ec600d07"
+      }
+    },
+    "plugins": [
+      "expo-build-properties"
+    ]
   }
 }
