--- a/package.json
+++ b/package.json
@@ -16,8 +16,10 @@
     "@react-navigation/drawer": "^6.6.15",
     "@react-navigation/material-bottom-tabs": "^6.2.29",
     "@react-navigation/native": "^6.1.18",
-    "@react-navigation/stack": "^6.3.29",
+    "@react-navigation/stack": "^6.4.1",
     "expo": "~50.0.17",
+    "expo-build-properties": "~0.11.1",
+    "expo-dev-client": "~3.3.12",
     "expo-sqlite": "~13.4.0",
     "expo-status-bar": "~1.11.1",
     "react": "18.2.0",
@@ -30,6 +32,8 @@
     "react-native-gesture-handler": "~2.14.0",
     "react-native-paper": "^5.12.5",
     "react-native-reanimated": "~3.6.2",
+    "react-native-safe-area-context": "4.8.2",
+    "react-native-screens": "~3.29.0",
     "react-native-svg": "14.1.0",
     "react-native-vector-icons": "^10.2.0",
     "react-native-web": "~0.19.6"
