--- a/app.json
+++ b/app.json
@@ -4,13 +4,8 @@
     "slug": "MyBuy",
     "version": "1.0.0",
     "orientation": "portrait",
-    "icon": "./assets/icon.png",
+    "icon": "./assets/icone.png",
     "userInterfaceStyle": "light",
-    "splash": {
-      "image": "./assets/splash.png",
-      "resizeMode": "contain",
-      "backgroundColor": "#b759f3"
-    },
     "assetBundlePatterns": [
       "**/*"
     ],
@@ -18,8 +13,13 @@
       "supportsTablet": true
     },
     "android": {
+      "splash": {
+        "image": "./assets/splash_screen.png",
+        "resizeMode": "contain",
+        "backgroundColor": "#b759f3"
+      },
       "adaptiveIcon": {
-        "foregroundImage": "./assets/adaptive-icon.png",
+        "foregroundImage": "./assets/icone.png",
         "backgroundColor": "#ffffff"
       },
       "package": "com.erickmota.MyBuy",
