--- a/package.json
+++ b/package.json
@@ -37,7 +37,8 @@
     "react-native-svg": "14.1.0",
     "react-native-vector-icons": "^10.2.0",
     "react-native-web": "~0.19.6",
-    "expo-image-picker": "~14.7.1"
+    "expo-image-picker": "~14.7.1",
+    "expo-splash-screen": "~0.26.5"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
